[package]
name = "mix"
version = "0.0.0"
authors = ["Lemix Team <lemixproject@gmail.com>"]
edition = "2018"
description = "Install and maintain lemix packages."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
clap = "2.33.1"
dialoguer = "0.6.2"
indicatif = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"
